# dino-game

./: CMakeLists.txt
src/: main.c
